objects/DRG_Code_Information__c.object
<CustomObject>
    <fields>
        <fullName>Campaign__c</fullName>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>DRG Code Informations</relationshipLabel>
        <relationshipName>DRG_Code_Informations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DRG_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DRG Code</label>
        <referenceTo>DRG_Code__c</referenceTo>
        <relationshipLabel>DRG Code Informations</relationshipLabel>
        <relationshipName>DRG_Code_Informations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <formula>DRG_Code__r.Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exclude__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MS_DRG__c</fullName>
        <formula>DRG_Code__r.MS_DRG__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DRG-Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Line__c</fullName>
        <formula>TEXT( DRG_Code__r.Service_Line__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Line</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Service_Line__c</fullName>
        <formula>TEXT( DRG_Code__r.Sub_Service_Line__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub Service Line</label>
        <type>Text</type>
    </fields>
    <label>DRG Code Information</label>
    <nameField>
        <displayFormat>DRG INFO-{000000}</displayFormat>
        <label>DRG Code Information Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DRG Code Informations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>